[package]
name = "rs-web-host"
version = "0.1.6"
edition = "2021"
authors = ["Steeoghr"]
description = "Rust web host"
homepage = "https://github.com/Steeoghr/rs-web-host"
repository = "https://github.com/Steeoghr/rs-web-host"
license = "MIT"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
inventory = "0.1.10"
once_cell = "1.9.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }


[lib]
proc-macro = true

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
